<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/cabecalhomain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:text="@string/bemvindo"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.488"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/corpomain"
        android:layout_width="369dp"
        android:layout_height="456dp"
        android:layout_marginTop="14dp"
        android:text="@string/maintexto"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cabecalhomain" />

    <Button
        android:id="@+id/btncadastro"
        android:layout_width="160dp"
        android:layout_height="48dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="18dp"
        android:text="@string/btncadastro"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/corpomain" />

    <Button
        android:id="@+id/btnpedaladas"
        android:layout_width="160dp"
        android:layout_height="47dp"
        android:layout_marginStart="18dp"
        android:layout_marginTop="15dp"
        android:text="@string/btnpedaladas"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/corpomain" />

    <Button
        android:id="@+id/btnmilhas"
        android:layout_width="160dp"
        android:layout_height="47dp"
        android:layout_marginStart="18dp"
        android:layout_marginTop="10dp"
        android:text="@string/btnmilhas"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnpedaladas" />

    <Button
        android:id="@+id/btnagendamentos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="18dp"
        android:text="@string/btnagendamentos"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btncadastro" />

</androidx.constraintlayout.widget.ConstraintLayout>